src/mini.output
Terminals unused in grammar

   tSELECT
   tRANGE
   tMAP
   tINTERFACE
   tGOTO
   tGO
   tDEFER
   tCONST
   tCHAN
   tFALLTHROUGH
   tDOTDOTDOT
   UBITWISEAND


State 122 conflicts: 1 reduce/reduce


Grammar

    0 $accept: prog $end

    1 prog: start

    2 start: package imports top_level_dcls

    3 imports: %empty
    4        | imports import tSEMICOLON

    5 top_level_dcls: %empty
    6               | top_level_dcls top_level_dcl tSEMICOLON

    7 package: tPACKAGE tIDENTIFIER tSEMICOLON

    8 import: tIMPORT tSTRINGITPVAL

    9 dcl: type_dcl
   10    | var_dcl

   11 top_level_dcl: dcl
   12              | func_dcl

   13 Type: tIDENTIFIER
   14     | tLEFTSQUAREBRACKET tRIGHTSQUAREBRACKET Type
   15     | tLEFTSQUAREBRACKET tINTVAL tRIGHTSQUAREBRACKET Type
   16     | tSTRUCT tLEFTBRACE field_dcls tRIGHTBRACE
   17     | tLEFTPAREN Type tRIGHTPAREN

   18 field_dcls: %empty
   19           | field_dcls field_dcl tSEMICOLON

   20 field_dcl: ident_list Type

   21 var_dcl: tVAR var_spec
   22        | tVAR tLEFTPAREN var_specs tRIGHTPAREN

   23 var_specs: %empty
   24          | var_specs var_spec tSEMICOLON

   25 var_spec: ident_list Type tASSIGN exp_list
   26         | ident_list Type
   27         | ident_list tASSIGN exp_list

   28 type_dcl: tTYPE type_spec
   29         | tTYPE tLEFTPAREN type_specs tRIGHTPAREN

   30 type_specs: %empty
   31           | type_specs type_spec tSEMICOLON

   32 type_spec: tIDENTIFIER Type

   33 func_dcl: tFUNC tIDENTIFIER signature block_stmt

   34 signature: params result
   35          | params

   36 result: params
   37       | Type

   38 params: tLEFTPAREN param_ls tRIGHTPAREN

   39 param_ls: %empty
   40         | ident_list Type
   41         | param_ls tCOMMA ident_list Type

   42 assign_stmt: exp_list tASSIGN exp_list
   43            | exp tPLUSEQUAL exp
   44            | exp tMINUSEQUAL exp
   45            | exp tOREQUAL exp
   46            | exp tXOREQUAL exp
   47            | exp tTIMESEQUAL exp
   48            | exp tDIVEQUAL exp
   49            | exp tMODEQUAL exp
   50            | exp tLEFTSHIFTEQUAL exp
   51            | exp tRIGHTSHIFTEQUAL exp
   52            | exp tANDEQUAL exp
   53            | exp tBITCLEAREQUAL exp

   54 stmt: continue_stmt
   55     | break_stmt
   56     | block_stmt
   57     | ifstmt
   58     | print_stmt
   59     | tRETURN
   60     | tRETURN exp
   61     | switch_stmt
   62     | simple_stmt
   63     | for_stmt
   64     | dcl

   65 stmts: stmts stmt tSEMICOLON
   66      | stmt tSEMICOLON

   67 print_stmt: tPRINT tLEFTPAREN exp_list tRIGHTPAREN
   68           | tPRINT tLEFTPAREN tRIGHTPAREN
   69           | tPRINTLN tLEFTPAREN exp_list tRIGHTPAREN
   70           | tPRINTLN tLEFTPAREN tRIGHTPAREN

   71 short_var_dec: ident_list tCOLONEQUAL exp_list

   72 $@1: %empty

   73 simple_stmt: $@1
   74            | exp
   75            | assign_stmt
   76            | inc_dec_stmt
   77            | short_var_dec

   78 inc_dec_stmt: exp tPLUSPLUS
   79             | exp tMINUSMINUS

   80 exp_list: exp
   81         | exp_list tCOMMA exp

   82 ident_list: tIDENTIFIER
   83           | ident_list tCOMMA tIDENTIFIER

   84 switch_stmt: tSWITCH simple_stmt tSEMICOLON exp tLEFTBRACE expr_case_clause tRIGHTBRACE
   85            | tSWITCH simple_stmt tSEMICOLON tLEFTBRACE expr_case_clause tRIGHTBRACE
   86            | tSWITCH exp tLEFTBRACE expr_case_clause tRIGHTBRACE
   87            | tSWITCH tLEFTBRACE expr_case_clause tRIGHTBRACE

   88 expr_case_clause: %empty
   89                 | expr_case_clause tCASE exp_list tCOLON switch_stmts
   90                 | expr_case_clause tDEFAULT tCOLON switch_stmts

   91 switch_stmts: %empty
   92             | stmts

   93 ifstmt: tIF simple_stmt tSEMICOLON exp block_stmt else_stmts
   94       | tIF simple_stmt tSEMICOLON exp block_stmt
   95       | tIF exp block_stmt else_stmts
   96       | tIF exp block_stmt

   97 else_stmts: tELSE ifstmt
   98           | tELSE block_stmt

   99 block_stmt: tLEFTBRACE stmts tRIGHTBRACE
  100           | tLEFTBRACE tRIGHTBRACE

  101 for_stmt: tFOR block_stmt
  102         | tFOR exp block_stmt
  103         | tFOR for_clause block_stmt

  104 for_clause: simple_stmt tSEMICOLON for_exp tSEMICOLON post_stmt

  105 for_exp: %empty
  106        | exp

  107 post_stmt: %empty
  108          | inc_dec_stmt
  109          | assign_stmt

  110 break_stmt: tBREAK

  111 continue_stmt: tCONTINUE

  112 primary_exp: tLEFTPAREN exp tRIGHTPAREN
  113            | literals
  114            | tIDENTIFIER
  115            | tAPPEND tLEFTPAREN exp tCOMMA exp tRIGHTPAREN
  116            | tLEN tLEFTPAREN exp tRIGHTPAREN
  117            | tCAP tLEFTPAREN exp tRIGHTPAREN
  118            | primary_exp tLEFTSQUAREBRACKET exp tRIGHTSQUAREBRACKET
  119            | primary_exp tDOT tIDENTIFIER
  120            | primary_exp tLEFTPAREN exp_list tRIGHTPAREN
  121            | primary_exp tLEFTPAREN tRIGHTPAREN

  122 literals: tINTVAL
  123         | tSTRINGITPVAL
  124         | tSTRINGRAWVAL
  125         | tFLOATVAL
  126         | tRUNEVAL

  127 exp: exp tOR exp
  128    | exp tAND exp
  129    | exp tEQUALS exp
  130    | exp tNOTEQUALS exp
  131    | exp tLESS exp
  132    | exp tLESSEQUALS exp
  133    | exp tGREATER exp
  134    | exp tGREATEREQUALS exp
  135    | exp tPLUS exp
  136    | exp tMINUS exp
  137    | exp tBITWISEOR exp
  138    | exp tBITWISEXOR exp
  139    | exp tTIMES exp
  140    | exp tDIV exp
  141    | exp tMOD exp
  142    | exp tLEFTSHIFT exp
  143    | exp tRIGHTSHIFT exp
  144    | exp tBITWISEAND exp
  145    | exp tBITCLEAR exp
  146    | unary_exp

  147 unary_exp: primary_exp
  148          | tPLUS unary_exp
  149          | tMINUS unary_exp
  150          | tBANG unary_exp
  151          | tBITWISEXOR unary_exp


Terminals, with rules where they appear

$end (0) 0
error (256)
tRUNEVAL (258) 126
tSTRINGITPVAL (259) 8 123
tSTRINGRAWVAL (260) 124
tINTVAL (261) 15 122
tFLOATVAL (262) 125
tIDENTIFIER (263) 7 13 32 33 82 83 114 119
tVAR (264) 21 22
tIF (265) 93 94 95 96
tELSE (266) 97 98
tPRINT (267) 67 68
tCOLON (268) 89 90
tASSIGN (269) 25 27 42
tSEMICOLON (270) 4 6 7 19 24 31 65 66 84 85 93 94 104
tLEFTPAREN (271) 17 22 29 38 67 68 69 70 112 115 116 117 120 121
tRIGHTPAREN (272) 17 22 29 38 67 68 69 70 112 115 116 117 120 121
tLEFTBRACE (273) 16 84 85 86 87 99 100
tRIGHTBRACE (274) 16 84 85 86 87 99 100
tBANG (275) 150
tPLUS (276) 135 148
tMINUS (277) 136 149
tTIMES (278) 139
tDIV (279) 140
tEQUALS (280) 129
tNOTEQUALS (281) 130
tGREATEREQUALS (282) 134
tLESSEQUALS (283) 132
tGREATER (284) 133
tLESS (285) 131
tAND (286) 128
tOR (287) 127
tSTRUCT (288) 16
tSELECT (289)
tRETURN (290) 59 60
tRANGE (291)
tPACKAGE (292) 7
tMAP (293)
tINTERFACE (294)
tIMPORT (295) 8
tGOTO (296)
tGO (297)
tFOR (298) 101 102 103
tDEFER (299)
tDEFAULT (300) 90
tCONTINUE (301) 111
tCONST (302)
tCHAN (303)
tCASE (304) 89
tBREAK (305) 110
tFALLTHROUGH (306)
tSWITCH (307) 84 85 86 87
tTYPE (308) 28 29
tPRINTLN (309) 69 70
tAPPEND (310) 115
tLEN (311) 116
tCAP (312) 117
tMOD (313) 141
tBITWISEAND (314) 144
tBITWISEOR (315) 137
tBITWISEXOR (316) 138 151
tBITCLEAR (317) 145
tLEFTSHIFT (318) 142
tRIGHTSHIFT (319) 143
tPLUSEQUAL (320) 43
tMINUSEQUAL (321) 44
tTIMESEQUAL (322) 47
tDIVEQUAL (323) 48
tMODEQUAL (324) 49
tPLUSPLUS (325) 78
tMINUSMINUS (326) 79
tANDEQUAL (327) 52
tOREQUAL (328) 45
tXOREQUAL (329) 46
tLEFTSHIFTEQUAL (330) 50
tRIGHTSHIFTEQUAL (331) 51
tBITCLEAREQUAL (332) 53
tCOLONEQUAL (333) 71
tDOTDOTDOT (334)
tCOMMA (335) 41 81 83 115
tDOT (336) 119
tLEFTSQUAREBRACKET (337) 14 15 118
tRIGHTSQUAREBRACKET (338) 14 15 118
tFUNC (339) 33
UBANG (340)
UMINUS (341)
UPLUS (342)
UCARET (343)
UBITWISEAND (344)


Nonterminals, with rules where they appear

$accept (90)
    on left: 0
prog (91)
    on left: 1, on right: 0
start (92)
    on left: 2, on right: 1
imports (93)
    on left: 3 4, on right: 2 4
top_level_dcls (94)
    on left: 5 6, on right: 2 6
package (95)
    on left: 7, on right: 2
import (96)
    on left: 8, on right: 4
dcl (97)
    on left: 9 10, on right: 11 64
top_level_dcl (98)
    on left: 11 12, on right: 6
Type (99)
    on left: 13 14 15 16 17, on right: 14 15 17 20 25 26 32 37 40 41
field_dcls (100)
    on left: 18 19, on right: 16 19
field_dcl (101)
    on left: 20, on right: 19
var_dcl (102)
    on left: 21 22, on right: 10
var_specs (103)
    on left: 23 24, on right: 22 24
var_spec (104)
    on left: 25 26 27, on right: 21 24
type_dcl (105)
    on left: 28 29, on right: 9
type_specs (106)
    on left: 30 31, on right: 29 31
type_spec (107)
    on left: 32, on right: 28 31
func_dcl (108)
    on left: 33, on right: 12
signature (109)
    on left: 34 35, on right: 33
result (110)
    on left: 36 37, on right: 34
params (111)
    on left: 38, on right: 34 35 36
param_ls (112)
    on left: 39 40 41, on right: 38 41
assign_stmt (113)
    on left: 42 43 44 45 46 47 48 49 50 51 52 53, on right: 75 109
stmt (114)
    on left: 54 55 56 57 58 59 60 61 62 63 64, on right: 65 66
stmts (115)
    on left: 65 66, on right: 65 92 99
print_stmt (116)
    on left: 67 68 69 70, on right: 58
short_var_dec (117)
    on left: 71, on right: 77
simple_stmt (118)
    on left: 73 74 75 76 77, on right: 62 84 85 93 94 104
$@1 (119)
    on left: 72, on right: 73
inc_dec_stmt (120)
    on left: 78 79, on right: 76 108
exp_list (121)
    on left: 80 81, on right: 25 27 42 67 69 71 81 89 120
ident_list (122)
    on left: 82 83, on right: 20 25 26 27 40 41 71 83
switch_stmt (123)
    on left: 84 85 86 87, on right: 61
expr_case_clause (124)
    on left: 88 89 90, on right: 84 85 86 87 89 90
switch_stmts (125)
    on left: 91 92, on right: 89 90
ifstmt (126)
    on left: 93 94 95 96, on right: 57 97
else_stmts (127)
    on left: 97 98, on right: 93 95
block_stmt (128)
    on left: 99 100, on right: 33 56 93 94 95 96 98 101 102 103
for_stmt (129)
    on left: 101 102 103, on right: 63
for_clause (130)
    on left: 104, on right: 103
for_exp (131)
    on left: 105 106, on right: 104
post_stmt (132)
    on left: 107 108 109, on right: 104
break_stmt (133)
    on left: 110, on right: 55
continue_stmt (134)
    on left: 111, on right: 54
primary_exp (135)
    on left: 112 113 114 115 116 117 118 119 120 121, on right: 118
    119 120 121 147
literals (136)
    on left: 122 123 124 125 126, on right: 113
exp (137)
    on left: 127 128 129 130 131 132 133 134 135 136 137 138 139 140
    141 142 143 144 145 146, on right: 43 44 45 46 47 48 49 50 51 52
    53 60 74 78 79 80 81 84 86 93 94 95 96 102 106 112 115 116 117
    118 127 128 129 130 131 132 133 134 135 136 137 138 139 140 141
    142 143 144 145
unary_exp (138)
    on left: 147 148 149 150 151, on right: 146 148 149 150 151


State 0

    0 $accept: . prog $end

    tPACKAGE  shift, and go to state 1

    prog     go to state 2
    start    go to state 3
    package  go to state 4


State 1

    7 package: tPACKAGE . tIDENTIFIER tSEMICOLON

    tIDENTIFIER  shift, and go to state 5


State 2

    0 $accept: prog . $end

    $end  shift, and go to state 6


State 3

    1 prog: start .

    $default  reduce using rule 1 (prog)


State 4

    2 start: package . imports top_level_dcls

    $default  reduce using rule 3 (imports)

    imports  go to state 7


State 5

    7 package: tPACKAGE tIDENTIFIER . tSEMICOLON

    tSEMICOLON  shift, and go to state 8


State 6

    0 $accept: prog $end .

    $default  accept


State 7

    2 start: package imports . top_level_dcls
    4 imports: imports . import tSEMICOLON

    tIMPORT  shift, and go to state 9

    $default  reduce using rule 5 (top_level_dcls)

    top_level_dcls  go to state 10
    import          go to state 11


State 8

    7 package: tPACKAGE tIDENTIFIER tSEMICOLON .

    $default  reduce using rule 7 (package)


State 9

    8 import: tIMPORT . tSTRINGITPVAL

    tSTRINGITPVAL  shift, and go to state 12


State 10

    2 start: package imports top_level_dcls .
    6 top_level_dcls: top_level_dcls . top_level_dcl tSEMICOLON

    tVAR   shift, and go to state 13
    tTYPE  shift, and go to state 14
    tFUNC  shift, and go to state 15

    $default  reduce using rule 2 (start)

    dcl            go to state 16
    top_level_dcl  go to state 17
    var_dcl        go to state 18
    type_dcl       go to state 19
    func_dcl       go to state 20


State 11

    4 imports: imports import . tSEMICOLON

    tSEMICOLON  shift, and go to state 21


State 12

    8 import: tIMPORT tSTRINGITPVAL .

    $default  reduce using rule 8 (import)


State 13

   21 var_dcl: tVAR . var_spec
   22        | tVAR . tLEFTPAREN var_specs tRIGHTPAREN

    tIDENTIFIER  shift, and go to state 22
    tLEFTPAREN   shift, and go to state 23

    var_spec    go to state 24
    ident_list  go to state 25


State 14

   28 type_dcl: tTYPE . type_spec
   29         | tTYPE . tLEFTPAREN type_specs tRIGHTPAREN

    tIDENTIFIER  shift, and go to state 26
    tLEFTPAREN   shift, and go to state 27

    type_spec  go to state 28


State 15

   33 func_dcl: tFUNC . tIDENTIFIER signature block_stmt

    tIDENTIFIER  shift, and go to state 29


State 16

   11 top_level_dcl: dcl .

    $default  reduce using rule 11 (top_level_dcl)


State 17

    6 top_level_dcls: top_level_dcls top_level_dcl . tSEMICOLON

    tSEMICOLON  shift, and go to state 30


State 18

   10 dcl: var_dcl .

    $default  reduce using rule 10 (dcl)


State 19

    9 dcl: type_dcl .

    $default  reduce using rule 9 (dcl)


State 20

   12 top_level_dcl: func_dcl .

    $default  reduce using rule 12 (top_level_dcl)


State 21

    4 imports: imports import tSEMICOLON .

    $default  reduce using rule 4 (imports)


State 22

   82 ident_list: tIDENTIFIER .

    $default  reduce using rule 82 (ident_list)


State 23

   22 var_dcl: tVAR tLEFTPAREN . var_specs tRIGHTPAREN

    $default  reduce using rule 23 (var_specs)

    var_specs  go to state 31


State 24

   21 var_dcl: tVAR var_spec .

    $default  reduce using rule 21 (var_dcl)


State 25

   25 var_spec: ident_list . Type tASSIGN exp_list
   26         | ident_list . Type
   27         | ident_list . tASSIGN exp_list
   83 ident_list: ident_list . tCOMMA tIDENTIFIER

    tIDENTIFIER         shift, and go to state 32
    tASSIGN             shift, and go to state 33
    tLEFTPAREN          shift, and go to state 34
    tSTRUCT             shift, and go to state 35
    tCOMMA              shift, and go to state 36
    tLEFTSQUAREBRACKET  shift, and go to state 37

    Type  go to state 38


State 26

   32 type_spec: tIDENTIFIER . Type

    tIDENTIFIER         shift, and go to state 32
    tLEFTPAREN          shift, and go to state 34
    tSTRUCT             shift, and go to state 35
    tLEFTSQUAREBRACKET  shift, and go to state 37

    Type  go to state 39


State 27

   29 type_dcl: tTYPE tLEFTPAREN . type_specs tRIGHTPAREN

    $default  reduce using rule 30 (type_specs)

    type_specs  go to state 40


State 28

   28 type_dcl: tTYPE type_spec .

    $default  reduce using rule 28 (type_dcl)


State 29

   33 func_dcl: tFUNC tIDENTIFIER . signature block_stmt

    tLEFTPAREN  shift, and go to state 41

    signature  go to state 42
    params     go to state 43


State 30

    6 top_level_dcls: top_level_dcls top_level_dcl tSEMICOLON .

    $default  reduce using rule 6 (top_level_dcls)


State 31

   22 var_dcl: tVAR tLEFTPAREN var_specs . tRIGHTPAREN
   24 var_specs: var_specs . var_spec tSEMICOLON

    tIDENTIFIER  shift, and go to state 22
    tRIGHTPAREN  shift, and go to state 44

    var_spec    go to state 45
    ident_list  go to state 25


State 32

   13 Type: tIDENTIFIER .

    $default  reduce using rule 13 (Type)


State 33

   27 var_spec: ident_list tASSIGN . exp_list

    tRUNEVAL       shift, and go to state 46
    tSTRINGITPVAL  shift, and go to state 47
    tSTRINGRAWVAL  shift, and go to state 48
    tINTVAL        shift, and go to state 49
    tFLOATVAL      shift, and go to state 50
    tIDENTIFIER    shift, and go to state 51
    tLEFTPAREN     shift, and go to state 52
    tBANG          shift, and go to state 53
    tPLUS          shift, and go to state 54
    tMINUS         shift, and go to state 55
    tAPPEND        shift, and go to state 56
    tLEN           shift, and go to state 57
    tCAP           shift, and go to state 58
    tBITWISEXOR    shift, and go to state 59

    exp_list     go to state 60
    primary_exp  go to state 61
    literals     go to state 62
    exp          go to state 63
    unary_exp    go to state 64


State 34

   17 Type: tLEFTPAREN . Type tRIGHTPAREN

    tIDENTIFIER         shift, and go to state 32
    tLEFTPAREN          shift, and go to state 34
    tSTRUCT             shift, and go to state 35
    tLEFTSQUAREBRACKET  shift, and go to state 37

    Type  go to state 65


State 35

   16 Type: tSTRUCT . tLEFTBRACE field_dcls tRIGHTBRACE

    tLEFTBRACE  shift, and go to state 66


State 36

   83 ident_list: ident_list tCOMMA . tIDENTIFIER

    tIDENTIFIER  shift, and go to state 67


State 37

   14 Type: tLEFTSQUAREBRACKET . tRIGHTSQUAREBRACKET Type
   15     | tLEFTSQUAREBRACKET . tINTVAL tRIGHTSQUAREBRACKET Type

    tINTVAL              shift, and go to state 68
    tRIGHTSQUAREBRACKET  shift, and go to state 69


State 38

   25 var_spec: ident_list Type . tASSIGN exp_list
   26         | ident_list Type .

    tASSIGN  shift, and go to state 70

    $default  reduce using rule 26 (var_spec)


State 39

   32 type_spec: tIDENTIFIER Type .

    $default  reduce using rule 32 (type_spec)


State 40

   29 type_dcl: tTYPE tLEFTPAREN type_specs . tRIGHTPAREN
   31 type_specs: type_specs . type_spec tSEMICOLON

    tIDENTIFIER  shift, and go to state 26
    tRIGHTPAREN  shift, and go to state 71

    type_spec  go to state 72


State 41

   38 params: tLEFTPAREN . param_ls tRIGHTPAREN

    tIDENTIFIER  shift, and go to state 22

    $default  reduce using rule 39 (param_ls)

    param_ls    go to state 73
    ident_list  go to state 74


State 42

   33 func_dcl: tFUNC tIDENTIFIER signature . block_stmt

    tLEFTBRACE  shift, and go to state 75

    block_stmt  go to state 76


State 43

   34 signature: params . result
   35          | params .

    tIDENTIFIER         shift, and go to state 32
    tLEFTPAREN          shift, and go to state 77
    tSTRUCT             shift, and go to state 35
    tLEFTSQUAREBRACKET  shift, and go to state 37

    $default  reduce using rule 35 (signature)

    Type    go to state 78
    result  go to state 79
    params  go to state 80


State 44

   22 var_dcl: tVAR tLEFTPAREN var_specs tRIGHTPAREN .

    $default  reduce using rule 22 (var_dcl)


State 45

   24 var_specs: var_specs var_spec . tSEMICOLON

    tSEMICOLON  shift, and go to state 81


State 46

  126 literals: tRUNEVAL .

    $default  reduce using rule 126 (literals)


State 47

  123 literals: tSTRINGITPVAL .

    $default  reduce using rule 123 (literals)


State 48

  124 literals: tSTRINGRAWVAL .

    $default  reduce using rule 124 (literals)


State 49

  122 literals: tINTVAL .

    $default  reduce using rule 122 (literals)


State 50

  125 literals: tFLOATVAL .

    $default  reduce using rule 125 (literals)


State 51

  114 primary_exp: tIDENTIFIER .

    $default  reduce using rule 114 (primary_exp)


State 52

  112 primary_exp: tLEFTPAREN . exp tRIGHTPAREN

    tRUNEVAL       shift, and go to state 46
    tSTRINGITPVAL  shift, and go to state 47
    tSTRINGRAWVAL  shift, and go to state 48
    tINTVAL        shift, and go to state 49
    tFLOATVAL      shift, and go to state 50
    tIDENTIFIER    shift, and go to state 51
    tLEFTPAREN     shift, and go to state 52
    tBANG          shift, and go to state 53
    tPLUS          shift, and go to state 54
    tMINUS         shift, and go to state 55
    tAPPEND        shift, and go to state 56
    tLEN           shift, and go to state 57
    tCAP           shift, and go to state 58
    tBITWISEXOR    shift, and go to state 59

    primary_exp  go to state 61
    literals     go to state 62
    exp          go to state 82
    unary_exp    go to state 64


State 53

  150 unary_exp: tBANG . unary_exp

    tRUNEVAL       shift, and go to state 46
    tSTRINGITPVAL  shift, and go to state 47
    tSTRINGRAWVAL  shift, and go to state 48
    tINTVAL        shift, and go to state 49
    tFLOATVAL      shift, and go to state 50
    tIDENTIFIER    shift, and go to state 51
    tLEFTPAREN     shift, and go to state 52
    tBANG          shift, and go to state 53
    tPLUS          shift, and go to state 54
    tMINUS         shift, and go to state 55
    tAPPEND        shift, and go to state 56
    tLEN           shift, and go to state 57
    tCAP           shift, and go to state 58
    tBITWISEXOR    shift, and go to state 59

    primary_exp  go to state 61
    literals     go to state 62
    unary_exp    go to state 83


State 54

  148 unary_exp: tPLUS . unary_exp

    tRUNEVAL       shift, and go to state 46
    tSTRINGITPVAL  shift, and go to state 47
    tSTRINGRAWVAL  shift, and go to state 48
    tINTVAL        shift, and go to state 49
    tFLOATVAL      shift, and go to state 50
    tIDENTIFIER    shift, and go to state 51
    tLEFTPAREN     shift, and go to state 52
    tBANG          shift, and go to state 53
    tPLUS          shift, and go to state 54
    tMINUS         shift, and go to state 55
    tAPPEND        shift, and go to state 56
    tLEN           shift, and go to state 57
    tCAP           shift, and go to state 58
    tBITWISEXOR    shift, and go to state 59

    primary_exp  go to state 61
    literals     go to state 62
    unary_exp    go to state 84


State 55

  149 unary_exp: tMINUS . unary_exp

    tRUNEVAL       shift, and go to state 46
    tSTRINGITPVAL  shift, and go to state 47
    tSTRINGRAWVAL  shift, and go to state 48
    tINTVAL        shift, and go to state 49
    tFLOATVAL      shift, and go to state 50
    tIDENTIFIER    shift, and go to state 51
    tLEFTPAREN     shift, and go to state 52
    tBANG          shift, and go to state 53
    tPLUS          shift, and go to state 54
    tMINUS         shift, and go to state 55
    tAPPEND        shift, and go to state 56
    tLEN           shift, and go to state 57
    tCAP           shift, and go to state 58
    tBITWISEXOR    shift, and go to state 59

    primary_exp  go to state 61
    literals     go to state 62
    unary_exp    go to state 85


State 56

  115 primary_exp: tAPPEND . tLEFTPAREN exp tCOMMA exp tRIGHTPAREN

    tLEFTPAREN  shift, and go to state 86


State 57

  116 primary_exp: tLEN . tLEFTPAREN exp tRIGHTPAREN

    tLEFTPAREN  shift, and go to state 87


State 58

  117 primary_exp: tCAP . tLEFTPAREN exp tRIGHTPAREN

    tLEFTPAREN  shift, and go to state 88


State 59

  151 unary_exp: tBITWISEXOR . unary_exp

    tRUNEVAL       shift, and go to state 46
    tSTRINGITPVAL  shift, and go to state 47
    tSTRINGRAWVAL  shift, and go to state 48
    tINTVAL        shift, and go to state 49
    tFLOATVAL      shift, and go to state 50
    tIDENTIFIER    shift, and go to state 51
    tLEFTPAREN     shift, and go to state 52
    tBANG          shift, and go to state 53
    tPLUS          shift, and go to state 54
    tMINUS         shift, and go to state 55
    tAPPEND        shift, and go to state 56
    tLEN           shift, and go to state 57
    tCAP           shift, and go to state 58
    tBITWISEXOR    shift, and go to state 59

    primary_exp  go to state 61
    literals     go to state 62
    unary_exp    go to state 89


State 60

   27 var_spec: ident_list tASSIGN exp_list .
   81 exp_list: exp_list . tCOMMA exp

    tCOMMA  shift, and go to state 90

    $default  reduce using rule 27 (var_spec)


State 61

  118 primary_exp: primary_exp . tLEFTSQUAREBRACKET exp tRIGHTSQUAREBRACKET
  119            | primary_exp . tDOT tIDENTIFIER
  120            | primary_exp . tLEFTPAREN exp_list tRIGHTPAREN
  121            | primary_exp . tLEFTPAREN tRIGHTPAREN
  147 unary_exp: primary_exp .

    tLEFTPAREN          shift, and go to state 91
    tDOT                shift, and go to state 92
    tLEFTSQUAREBRACKET  shift, and go to state 93

    $default  reduce using rule 147 (unary_exp)


State 62

  113 primary_exp: literals .

    $default  reduce using rule 113 (primary_exp)


State 63

   80 exp_list: exp .
  127 exp: exp . tOR exp
  128    | exp . tAND exp
  129    | exp . tEQUALS exp
  130    | exp . tNOTEQUALS exp
  131    | exp . tLESS exp
  132    | exp . tLESSEQUALS exp
  133    | exp . tGREATER exp
  134    | exp . tGREATEREQUALS exp
  135    | exp . tPLUS exp
  136    | exp . tMINUS exp
  137    | exp . tBITWISEOR exp
  138    | exp . tBITWISEXOR exp
  139    | exp . tTIMES exp
  140    | exp . tDIV exp
  141    | exp . tMOD exp
  142    | exp . tLEFTSHIFT exp
  143    | exp . tRIGHTSHIFT exp
  144    | exp . tBITWISEAND exp
  145    | exp . tBITCLEAR exp

    tPLUS           shift, and go to state 94
    tMINUS          shift, and go to state 95
    tTIMES          shift, and go to state 96
    tDIV            shift, and go to state 97
    tEQUALS         shift, and go to state 98
    tNOTEQUALS      shift, and go to state 99
    tGREATEREQUALS  shift, and go to state 100
    tLESSEQUALS     shift, and go to state 101
    tGREATER        shift, and go to state 102
    tLESS           shift, and go to state 103
    tAND            shift, and go to state 104
    tOR             shift, and go to state 105
    tMOD            shift, and go to state 106
    tBITWISEAND     shift, and go to state 107
    tBITWISEOR      shift, and go to state 108
    tBITWISEXOR     shift, and go to state 109
    tBITCLEAR       shift, and go to state 110
    tLEFTSHIFT      shift, and go to state 111
    tRIGHTSHIFT     shift, and go to state 112

    $default  reduce using rule 80 (exp_list)


State 64

  146 exp: unary_exp .

    $default  reduce using rule 146 (exp)


State 65

   17 Type: tLEFTPAREN Type . tRIGHTPAREN

    tRIGHTPAREN  shift, and go to state 113


State 66

   16 Type: tSTRUCT tLEFTBRACE . field_dcls tRIGHTBRACE

    $default  reduce using rule 18 (field_dcls)

    field_dcls  go to state 114


State 67

   83 ident_list: ident_list tCOMMA tIDENTIFIER .

    $default  reduce using rule 83 (ident_list)


State 68

   15 Type: tLEFTSQUAREBRACKET tINTVAL . tRIGHTSQUAREBRACKET Type

    tRIGHTSQUAREBRACKET  shift, and go to state 115


State 69

   14 Type: tLEFTSQUAREBRACKET tRIGHTSQUAREBRACKET . Type

    tIDENTIFIER         shift, and go to state 32
    tLEFTPAREN          shift, and go to state 34
    tSTRUCT             shift, and go to state 35
    tLEFTSQUAREBRACKET  shift, and go to state 37

    Type  go to state 116


State 70

   25 var_spec: ident_list Type tASSIGN . exp_list

    tRUNEVAL       shift, and go to state 46
    tSTRINGITPVAL  shift, and go to state 47
    tSTRINGRAWVAL  shift, and go to state 48
    tINTVAL        shift, and go to state 49
    tFLOATVAL      shift, and go to state 50
    tIDENTIFIER    shift, and go to state 51
    tLEFTPAREN     shift, and go to state 52
    tBANG          shift, and go to state 53
    tPLUS          shift, and go to state 54
    tMINUS         shift, and go to state 55
    tAPPEND        shift, and go to state 56
    tLEN           shift, and go to state 57
    tCAP           shift, and go to state 58
    tBITWISEXOR    shift, and go to state 59

    exp_list     go to state 117
    primary_exp  go to state 61
    literals     go to state 62
    exp          go to state 63
    unary_exp    go to state 64


State 71

   29 type_dcl: tTYPE tLEFTPAREN type_specs tRIGHTPAREN .

    $default  reduce using rule 29 (type_dcl)


State 72

   31 type_specs: type_specs type_spec . tSEMICOLON

    tSEMICOLON  shift, and go to state 118


State 73

   38 params: tLEFTPAREN param_ls . tRIGHTPAREN
   41 param_ls: param_ls . tCOMMA ident_list Type

    tRIGHTPAREN  shift, and go to state 119
    tCOMMA       shift, and go to state 120


State 74

   40 param_ls: ident_list . Type
   83 ident_list: ident_list . tCOMMA tIDENTIFIER

    tIDENTIFIER         shift, and go to state 32
    tLEFTPAREN          shift, and go to state 34
    tSTRUCT             shift, and go to state 35
    tCOMMA              shift, and go to state 36
    tLEFTSQUAREBRACKET  shift, and go to state 37

    Type  go to state 121


State 75

   99 block_stmt: tLEFTBRACE . stmts tRIGHTBRACE
  100           | tLEFTBRACE . tRIGHTBRACE

    tRUNEVAL       shift, and go to state 46
    tSTRINGITPVAL  shift, and go to state 47
    tSTRINGRAWVAL  shift, and go to state 48
    tINTVAL        shift, and go to state 49
    tFLOATVAL      shift, and go to state 50
    tIDENTIFIER    shift, and go to state 122
    tVAR           shift, and go to state 13
    tIF            shift, and go to state 123
    tPRINT         shift, and go to state 124
    tLEFTPAREN     shift, and go to state 52
    tLEFTBRACE     shift, and go to state 75
    tRIGHTBRACE    shift, and go to state 125
    tBANG          shift, and go to state 53
    tPLUS          shift, and go to state 54
    tMINUS         shift, and go to state 55
    tRETURN        shift, and go to state 126
    tFOR           shift, and go to state 127
    tCONTINUE      shift, and go to state 128
    tBREAK         shift, and go to state 129
    tSWITCH        shift, and go to state 130
    tTYPE          shift, and go to state 14
    tPRINTLN       shift, and go to state 131
    tAPPEND        shift, and go to state 56
    tLEN           shift, and go to state 57
    tCAP           shift, and go to state 58
    tBITWISEXOR    shift, and go to state 59

    $default  reduce using rule 72 ($@1)
